--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
+/* Add styling for your page here */
+
 .App {
-  text-align: center;
+  background:linear-gradient(pink, lightskyblue);
+  display: flex;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.BakeryItem {
+  border: 5px inset #ddd;
+  border-radius: 20px;
+  padding: 0;
+  width: 150px;
+  align-self: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.bakery-items {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 16px;
+  margin-left: auto;
+  padding: 16px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.bakery-items .window-body > * {
+  margin: 0;
+}
+.window-body {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  height: 210px;
+  justify-content: space-between;
+  gap: 1em
 }
