--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   align-self: center;
 }
 
-.bakery-items {
+.ticket-items {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 16px;
