--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,19 @@
 /* Add styling for your page here */
 
 .App {
-  background:linear-gradient(pink, lightskyblue);
+  background:linear-gradient(rgb(78, 6, 120), pink);
   display: flex;
 }
-
+h3 {
+  display: block;
+  font-size: 2.00em;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  color:white;
+}
 .ticket-Item {
   border: 5px inset #ddd;
   border-radius: 10px;
@@ -25,7 +34,7 @@
   margin: 0;
 }
 .window {
-  background-color: cornflowerblue;
+  background-color: lightblue;
   width: 320;
   display: "inline-block";
 }
@@ -38,7 +47,7 @@
 }
 
 .aggregator-window {
-  background-color: rgb(166, 245, 159);
+  background-color: lightpink;
   width: 300;
   display: "inline-block"
 }
