--- a/src/App.css
+++ b/src/App.css
@@ -17,9 +17,8 @@ h3 {
 .ticket-Item {
   border: 5px inset #ddd;
   border-radius: 10px;
-  padding: 0;
   width: 100px;
-  height: 100px;
+  height: 200px;
   align-self: center;
 }
 
@@ -37,13 +36,15 @@ h3 {
   background-color: lightblue;
   width: 320;
   display: "inline-block";
+  text-align: center;
 }
 .window-body {
   display: flex;
   flex-direction: column;
-  height: 310px;
+  height: 380px;
   justify-content: space-between;
-  gap: 1em
+  gap: 1em;
+  padding: 10px
 }
 
 .aggregator-window {
